--- a/ocd.html
+++ b/ocd.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
-  <link rel="stylesheet" href="/lib/bootstrap-icons-1.13.1/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/ocd.css">
   <title>ONE CARD DUNGEON</title>
   <style>
@@ -168,5 +168,6 @@
   </div>
   <script src="js/ocd.js"></script>
 </body>
+
 
 </html>
